<resources>
    <string name="app_name">FootApp</string>
    <string name="msgUsuario">Usuario</string>
    <string name="msgClave">Contraseña</string>
    <string name="butIniciar">Inicio</string>
    <string name="texNoUsuario">¿Sin una cuenta aún? ,</string>
    <string name="texCrearusuario">Registrate</string>
    <string name="texPerdioClave">¿Se te olvidó?</string>
    <string name="texRecuperarClave">Recuperar cuenta</string>

    <string name="content_description_media">user image</string>
    <string name="btn_registarse">Registrarse</string>

    <string name="text_restaurant">Restaurantes</string>
    <string name="text_restaurant2">Restaurante Chill</string>
    <string name="text_bar">Bares</string>
    <string name="text_bar2">Bar La Bomba</string>
    <string name="texto_bienvenida">¿A dónde vamos hoy?</string>
    <string name="buscar">Buscar</string>
    <string name="textBar">Bares y Bebidas</string>
    <string name="textRest">Restaurantes</string>
    <string name="nomore">Vaya parece que no hay mucho por ver ahora :(</string>

    <string name="nombre_restaurante">Restaurante Chill</string>
    <string name="direccion_nombre">Av 16 # 19-65 B.Florez Cúcuta , Colombia</string>
    <string name="categoria1_rest">Tematico</string>
    <string name="categoria2_rest">Gourmet</string>
    <string name="categoria3_rest">Familiar</string>
    <string name="infoRestuarante">Informacion del restaurante</string>
    <string name="descripcionRestaurante">Este lugar te ofrece unos precios adecuados por unas comidas deliciosas. Una decoración cuidada y su ambiente moderno ayudan a sus clientes a sentirse relajados.</string>
    <string name="disponibilidad">Disponibilidad</string>

    <string name="horario1_rest">5:30 Pm</string>
    <string name="horario2_rest">8:00 Pm</string>
    <string name="horario3_rest">9:30 Pm</string>


    <string name="nombre_Bar">Bar La bomba</string>
    <string name="direccion_nombreBar">Av 1 Barrio Blanco Cúcuta , Colombia</string>
    <string name="categoria1_bar">Tematico</string>
    <string name="categoria2_bar">Fiesta</string>
    <string name="categoria3_bar">Amigos</string>
    <string name="infoBar">Informacion del Bar</string>
    <string name="descripcionBar">Este lugar te ofrece unos precios adecuados por unos cocteles deliciosos. Una decoración cuidada y su ambiente moderno ayudan a sus clientes a sentirse relajados.</string>
    <string name="disponibilidadBar">Disponibilidad</string>

    <string name="horario1_bar">8:30 Pm</string>
    <string name="horario2_bar">11:00 Pm</string>
    <string name="horario3_bar">12:30 Am</string>
    <string name="RestauranteChill">Restaurante Chill</string>
    <string name="descripcion">Mesa para dos personas, vino y pastas a la bolañesa</string>
    <string name="fecha">24/10/2022</string>
    <string name="RestauranteMini">Restaurante Mini</string>
    <string name="descripcion2">Arepas colombianas y más</string>
    <string name="fecha2">27/10/2022</string>
    <string name="RestauranteBomba">Bar la bomba</string>
    <string name="descripcion3">Deliciosos cocteles con la bebida alcoholica de preferencia</string>
    <string name="fecha3">05/11/2022</string>


    <string name="rest_nombre_1">Ensalada Cesar</string>
    <string name="rest_descripcion_1">Ensalada de gambas, champiñones, cilantro</string>
    <string name="rest_precio_1">$8000</string>

    <string name="rest_nombre_2">Picada Mixta</string>
    <string name="rest_descripcion_2">Contiene pollo, champiñones, camarones y huevos</string>
    <string name="rest_precio_2">$12000</string>

    <string name="rest_nombre_3">Hamburguesa Gitana</string>
    <string name="rest_descripcion_3">Pan blanco, carne de res, queso, tocineta, huevo, vegetales</string>
    <string name="rest_precio_3">$22000</string>

    <string name="rest_nombre_4">Salchipollo</string>
    <string name="rest_descripcion_4">100 gr de papa a la francesa, 50 gr de salchicha y 50 gr de pollo</string>
    <string name="rest_precio_4">$15000</string>

    <string name="bar_nombre_1">Capitan Sparrow</string>
    <string name="bar_descripcion_1">Ron dorado, brandy, ginebra</string>
    <string name="bar_precio_1">$24000</string>

    <string name="bar_nombre_2">Lego</string>
    <string name="bar_descripcion_2">Vodka, gotas de vainilla, ron de coco, syrop</string>
    <string name="bar_precio_2">$20000</string>

    <string name="bar_nombre_3">Tequila al coco</string>
    <string name="bar_descripcion_3">Vodka lemongras, licor de cafe, crema de leche, amaretto</string>
    <string name="bar_precio_3">$12000</string>

    <string name="bar_nombre_4">Spritz al limoncillo</string>
    <string name="bar_descripcion_4">Ginebra, Jagermaister,syrop de romero, zumo de limón</string>
    <string name="bar_precio_4">$13000</string>

    <string name="nombre_reserva">Restaurante Chill</string>
    <string name="spinner">dropDownMenuExample</string>
    <string name="btn_reservar">Reservar</string>
    <string name="reserva_hora">Hora Reservada</string>
    <string name="reserva">" 8:00 PM"</string>
    <string name="RESERVA">RESERVA</string>
    <string name="Explorar">Explorar</string>
    <string name="txt_comida">¡Elijamos tu proxima comida!</string>
    <string name="conoceproductos">¡Conoce las mejores comidas y bebidas en un solo lugar con tan solo un click!</string>

    <string name="datos">Mis datos</string>
    <string name="correo">Correo electrónico</string>
    <string name="correo_info">genesisdvj@gmail.com</string>
    <string name="nombre">Nombre completo</string>
    <string name="nombre_info">Génesis Daniela Vargas Jáuregui</string>
    <string name="identificacion">100232547</string>
    <string name="telefono">Télefono</string>
    <string name="telefono_info">Fijo - 53223244</string>
    <string name="telefono_info2">Personal - 313245857</string>
    <string name="dir">Dirección</string>
    <string name="dir1">Av 17 # 8-1</string>
    <string name="dir2">Barrio Blanco</string>

</resources>